webRequest: reliably determine tabId

BUG=613718
TEST=Provided by https://codereview.chromium.org/2003593002/.
 Tested locally with N=50 that the tests don't fail any more
 (see bug report for details).

Review-Url: https://codereview.chromium.org/2002763003
Cr-Commit-Position: refs/heads/master@{#395471}

Former-commit-id: 1b8747c4fed55e7fde4344eb0a71463855096502